@@ -21,7 +21,7 @@ plugins {
     id "org.springframework.boot" version "${spring_boot_version}"
     id "com.google.cloud.tools.jib" version "3.2.1"
     id "com.github.node-gradle.node" version "3.2.1"
-    id "com.diffplug.spotless" version "6.4.1"
+    id "com.diffplug.spotless" version "6.4.2"
     // this allows us to find outdated dependencies via ./gradlew dependencyUpdates
     id "com.github.ben-manes.versions" version "0.42.0"
     id "com.github.andygoossens.modernizer" version "1.6.2"
@@ -76,10 +76,6 @@ springBoot {
     mainClass = "de.tum.in.www1.artemis.ArtemisApp"
 }
 
-bootRun {
-    jvmArgs = ["--illegal-access=warn"]
-}
-
 modernizer {
     failOnViolations = false
     includeTestClasses = true
@@ -95,7 +91,6 @@ test {
     }
     testLogging.showStandardStreams = true
     reports.html.required = false
-    jvmArgs "--illegal-access=warn"
 }
 
 task testReport(type: TestReport) {
@@ -104,7 +99,7 @@ task testReport(type: TestReport) {
 }
 
 jacoco {
-    toolVersion = "0.8.7"
+    toolVersion = "0.8.8"
 }
 
 jar {
@@ -185,20 +180,20 @@ dependencies {
     implementation "me.xdrop:fuzzywuzzy:1.4.0"
     implementation "com.atlassian.bamboo:bamboo-specs:8.1.3"
     implementation "com.thoughtworks.qdox:qdox:2.0.1"
-    implementation "io.sentry:sentry-logback:5.7.1"
-    implementation "io.sentry:sentry-spring-boot-starter:5.7.1"
+    implementation "io.sentry:sentry-logback:5.7.3"
+    implementation "io.sentry:sentry-spring-boot-starter:5.7.3"
     implementation "org.jsoup:jsoup:1.14.3"
     implementation "commons-codec:commons-codec:1.15"   // needed for spring security saml2
 
-    implementation "org.springdoc:springdoc-openapi-ui:1.6.6"
+    implementation "org.springdoc:springdoc-openapi-ui:1.6.7"
 
     // import JHipster dependencies BOM
     implementation platform("tech.jhipster:jhipster-dependencies:${jhipster_dependencies_version}")
 
     implementation "tech.jhipster:jhipster-framework:${jhipster_dependencies_version}"
     implementation "org.springframework.boot:spring-boot-starter-cache:${spring_boot_version}"
-    implementation "io.micrometer:micrometer-registry-prometheus:1.8.4"
-    implementation "net.logstash.logback:logstash-logback-encoder:7.0.1"
+    implementation "io.micrometer:micrometer-registry-prometheus:1.8.5"
+    implementation "net.logstash.logback:logstash-logback-encoder:7.1.1"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-hppc:${fasterxml_version}"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${fasterxml_version}"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:${fasterxml_version}"
@@ -237,9 +232,9 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-config:3.1.1"
     implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.13.RELEASE"
 
-    implementation "io.netty:netty-all:4.1.75.Final"
-    implementation "io.projectreactor.netty:reactor-netty:1.0.17"
-    implementation "org.springframework:spring-messaging:5.3.18"
+    implementation "io.netty:netty-all:4.1.76.Final"
+    implementation "io.projectreactor.netty:reactor-netty:1.0.18"
+    implementation "org.springframework:spring-messaging:5.3.19"
 
     implementation "org.springframework.security:spring-security-config:${spring_security_version}"
     implementation "org.springframework.security:spring-security-data:${spring_security_version}"
@@ -259,11 +254,11 @@ dependencies {
     implementation "mysql:mysql-connector-java:8.0.28"
 
     implementation "org.zalando:problem-spring-web:0.27.0"
-    implementation "com.ibm.icu:icu4j:70.1"
+    implementation "com.ibm.icu:icu4j:71.1"
     implementation "com.github.seancfoley:ipaddress:5.3.4"
     implementation "org.apache.maven:maven-model:3.8.5"
     implementation "org.apache.pdfbox:pdfbox:2.0.25"
-    implementation "com.google.protobuf:protobuf-java:3.19.4"
+    implementation "com.google.protobuf:protobuf-java:3.20.0"
     implementation "org.commonmark:commonmark:0.18.2"
     implementation "de.tum.in.ase.athene:client:0.0.2"
 
@@ -288,9 +283,9 @@ dependencies {
     testImplementation "org.mockito:mockito-junit-jupiter:${mockito_version}"
     testImplementation "com.h2database:h2:1.4.200"
     testImplementation "org.awaitility:awaitility:4.2.0"
-    testImplementation "org.apache.maven.shared:maven-invoker:3.1.0"
+    testImplementation "org.apache.maven.shared:maven-invoker:3.2.0"
     testImplementation "org.gradle:gradle-tooling-api:7.3"
-    testImplementation "org.apache.maven.surefire:surefire-report-parser:3.0.0-M5"
+    testImplementation "org.apache.maven.surefire:surefire-report-parser:3.0.0-M6"
     testImplementation "com.opencsv:opencsv:5.6"
 
     // Lightweight JSON library needed for the internals of the MockRestServiceServer
